Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-639

[C++] Invalid offset in slices

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 0.3.0
    • Python
    • None

    Description

      The following code (slice.py)

      import pyarrow as pa
      
      arr = pa.from_pylist(['a', 'b', 'c'])
      s = arr.slice(1, 10)
      print('ok')
      print(len(s))
      print('ok')
      print(s)
      print('crash')
      

      produces

      $ python slice.py
      ok
      2
      ok
      terminate called after throwing an instance of 'std::length_error'
        what():  basic_string::_M_create
      [1]    28401 abort (core dumped)  python slice.py
      $
      

      Attachments

        Activity

          People

            tebeka Miki Tebeka
            tebeka Miki Tebeka
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: