[ARROW-639] [C++] Invalid offset in slices

Fix incrementing offest_ twice in Slice